Redirect "login" to "login.php" - Some redirection for making the "guessing" part easier

--- a/pika_baby/docker-compose.yml
+++ b/pika_baby/docker-compose.yml
@@ -7,3 +7,4 @@ services:
             - "12002:80"
         volumes:
             - ./server:/var/www/html/
+            - ./apache2.conf:/etc/apache2/apache2.conf
