More tag filters, Bot rewrite
- More tag filters:
    - <script>, <img>, <svg>
    - there are dozen of tags available XD
- Bot (headless-browser) rewrite:
    - The old one used zombie.js, which behaves quite differently than our own browsers.
        - for example, <img> and <svg> tags have no effect
    - I changed to use Selenium-Chrome as the new headless-browser.
    - The python code communicates to another container, which then runs standalone chrome browser.

--- a/msg_board/docker-compose.yml
+++ b/msg_board/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     bot:
         build: ./bot
         volumes:
-            - ./bot/src:/home/bot
-        entrypoint: python3 ./bot.py
+            - ./bot/app:/usr/src/app
+        entrypoint: python -u bot.py
         links:
             - web
     web:
@@ -23,6 +23,8 @@ services:
         volumes:
             - ./server/sql:/docker-entrypoint-initdb.d
             - persistent:/var/lib/mysql
+    browser:
+        image: selenium/standalone-chrome
 volumes:
     persistent:
 
