--- a/msg_board/bot/Dockerfile
+++ b/msg_board/bot/Dockerfile
@@ -1,10 +1,7 @@
-FROM ubuntu:16.04
+FROM python:3
 
-RUN apt-get update
-RUN apt-get install nodejs npm python3 -y
-RUN npm init -f
-RUN npm install zombie@5.x --save-dev
+WORKDIR /usr/src/app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN useradd -ms /bin/bash bot
-USER bot
-WORKDIR /home/bot
+CMD ["python", "-u", "bot.py"]
