Memory limit for each containers: 1GB
- 'pika_inj' once caused the whole server of running out of memory, which is disastreous

--- a/pika_cute/docker-compose.yml
+++ b/pika_cute/docker-compose.yml
@@ -1,10 +1,15 @@
 version: "3"
 services:
-    pika_cute:
+    web:
         container_name: pika_cute
-        build: .
+        image: php:7.2-apache
         ports: 
             - "12003:80"
         volumes:
             - ./server:/var/www/html/
             - ./F14G:/F14G:ro
+        deploy:
+            resources:
+                limits:
+                    memory: 1g
+
