--- a/hello_pika/docker-compose.yml
+++ b/hello_pika/docker-compose.yml
@@ -7,3 +7,8 @@ services:
             - "12001:80"
         volumes:
             - ./server:/var/www/html/
+        deploy:
+            resources:
+                limits:
+                    memory: 1g
+
