--- a/msg_board/docker-compose.yml
+++ b/msg_board/docker-compose.yml
@@ -7,6 +7,10 @@ services:
         entrypoint: python -u bot.py
         links:
             - web
+        deploy:
+            resources:
+                limits:
+                    memory: 1g
     web:
         build: ./server/web
         ports: 
@@ -25,6 +29,7 @@ services:
             - persistent:/var/lib/mysql
     browser:
         image: selenium/standalone-chrome
+
 volumes:
     persistent:
 
