--- a/pika_baby/docker-compose.yml
+++ b/pika_baby/docker-compose.yml
@@ -7,3 +7,7 @@ services:
             - "12002:80"
         volumes:
             - ./server:/var/www/html/
+        deploy:
+            resources:
+                limits:
+                    memory: 1g
