--- a/pika_baby/docker-compose.yml
+++ b/pika_baby/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
     web:
         container_name: pika_baby
-        image: php:7.2-apache
+        build: .
         ports: 
             - "12002:80"
         volumes:
